<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/registration_back">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/back_btn_sign_up"
                android:layout_width="40dp"
                android:layout_height="40dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/back_arrows" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Sign Up"
                    android:textColor="#ffffff"
                    android:textSize="23dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#75ffffff">

                    <EditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_bottom_border"
                        android:gravity="center"
                        android:hint="@string/username"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="#ffffff"
                        android:textCursorDrawable="@drawable/edit_text_cursor_color" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_nameeee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColorHint="#75ffffff">

                    <EditText
                        android:id="@+id/input_nameee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_bottom_border"
                        android:gravity="center"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="#ffffff"
                        android:textCursorDrawable="@drawable/edit_text_cursor_color" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_nameg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:textColorHint="#75ffffff">

                    <EditText
                        android:id="@+id/input_nameg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_bottom_border"
                        android:gravity="center"
                        android:hint="@string/password"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="#ffffff"
                        android:textCursorDrawable="@drawable/edit_text_cursor_color" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_nameh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:textColorHint="#75ffffff">

                    <EditText
                        android:id="@+id/input_nameh"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_bottom_border"
                        android:gravity="center"
                        android:hint="@string/confirm_password"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="#ffffff"
                        android:textCursorDrawable="@drawable/edit_text_cursor_color" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <com.andexert.library.RippleView
                android:id="@+id/more"
                rv_centered="true"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_rounded"
                android:gravity="center"
                android:textSize="18dp">

                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_color"
                    android:gravity="center"
                    android:text="Sign in"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="18dp" />
            </com.andexert.library.RippleView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signin"
                    android:textColor="#75ffffff"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="  Sign In"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
