<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e8e8e8">

    <LinearLayout
        android:id="@+id/layputone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0174df"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp"
            android:weightSum="3">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:layout_weight="0.1"
                android:background="@drawable/back_arrows_white" />

            <com.orderpro.customer.customfonts.Custom_text
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_weight="2.5"
                android:text="Woman, Dresses"
                android:textColor="#ffffff"
                android:textSize="18dp" />
            <!--njknsnfnsnf-->
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="right|center"
                android:layout_marginLeft="40dp"
                android:layout_weight="0.1"
                android:background="@drawable/icon_cart_wh" />
        </LinearLayout>
        <!--HBJ-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.orderpro.customer.customfonts.Custom_Btntxt
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/addtowish"
                android:textColor="#ffffff" />

            <com.orderpro.customer.customfonts.Custom_Btntxt
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/addtocart"
                android:textColor="#ffffff" />

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layputone">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:orientation="vertical">

                <com.daimajia.slider.library.SliderLayout
                    android:id="@+id/image_slider"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_below="@+id/toolbar"
                    custom:pager_animation="Accordion">

                </com.daimajia.slider.library.SliderLayout>

                <LinearLayout
                    android:id="@+id/layouttwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_rounded_corners"
                    android:orientation="horizontal"
                    android:padding="12dp"
                    android:weightSum="2">

                    <com.orderpro.customer.customfonts.Custom_Txt_Bold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.8"
                        android:gravity="left"
                        android:text="Elegant Blue Shirt"
                        android:textColor="#000"
                        android:textSize="18dp" />

                    <com.orderpro.customer.customfonts.Custom_Btntxt
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:background="#e8e8e8"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="₹ 605.00"
                        android:textAllCaps="false" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corners"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/arrowchag"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:background="@drawable/add_iicon" />

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="#000" />

                    <com.orderpro.customer.view.Custom_Txt_Bold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="30dp"
                        android:gravity="center"
                        android:text="Description"
                        android:textColor="#000"
                        android:textSize="18dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/descripdtl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:visibility="gone">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5px"
                        android:background="#000000" />

                    <com.orderpro.customer.view.custom_text
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/shirtdesription" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corners"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="2dp"
                        android:background="@drawable/color_drop" />

                    <com.orderpro.customer.view.Custom_Txt_Bold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="2dp"
                        android:gravity="center"
                        android:text="Colour :"
                        android:textColor="#000"
                        android:textSize="18dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp">

                    <com.orderpro.customer.view.custom_text
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Choose a colour for item"
                        android:textColor="#808b96"
                        android:textSize="18dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <LinearLayout
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="15dp"
                        android:background="#2980B9">

                        <Button
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/color_selector"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="15dp"
                        android:background="#D68910">

                        <Button
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/color_selector"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="15dp"
                        android:background="#28B463">

                        <Button
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/color_selector"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
